--- a/qooxdoo/framework/source/resource/qx/mobile/css/common/main.css
+++ b/qooxdoo/framework/source/resource/qx/mobile/css/common/main.css
@@ -26,6 +26,12 @@ body > * {
     -webkit-user-select: auto;
 }
 
+.no-wrap {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 /* SCROLLER */
 
 .scroll {
